--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "cd frontend && npm install && npm run build",
+    "start": "cd backend && node server.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
