--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "cd frontend && npm install && npm run build",
-    "start": "cd backend && node server.js",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node backend/server.js",
+    "client": "vite",
+    "server": "node backend/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -20,7 +21,11 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^11.11.10",
+    "mongoose": "^8.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
@@ -31,11 +36,13 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.47",
     "sass-embedded": "^1.79.4",
     "tailwindcss": "^3.4.13",
