--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "vite build",
     "start": "node backend/server.js",
     "client": "vite",
     "server": "node backend/server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
