--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/server.js",  
+        "src": "backend/server.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
         "src": "/projects",
+        "dest": "backend/server.js"
+      },
+      {
+        "src": "/api/(.*)",
         "dest": "backend/server.js"
       },
       {
